--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Requirements and General Info for generate_fig.py
 2. To adjust dimensions of figure, change gridwidth (line 8). Font sizes must be modified separately.
 3. To adjust location of figure in pdf, change the initial values in gridhor and gridvert lists (lines 9 and 10).
 4. Adjust pdf size on line 26 (setPageSize).
-5. Assumes csv files, intervals cannot span over max. 2 months.
+5. Assumes csv files, intervals can span over max. 2 months.
 
 
 How to run:
